--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -1,5 +1,15 @@
 @charset "utf-8";
 
+/* 스킵 내비게이션 */
+#skip {position: relative;}
+#skip a {
+  position: absolute; left: 0; top: -35px; border: 1px solid #fff; 
+  color: #fff; background: #333; line-height: 30px; 
+  width: 160px; text-align: center;
+}
+#skip a:active,
+#skip a:focus {top: 0;}
+
 /* 레아이웃 */
 #wrap {width: 100%;}
 #header {height: 325px; background: #111;}
