--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -12,7 +12,7 @@
 
 /* 레아이웃 */
 #wrap {width: 100%;}
-#header {height: 325px; background: #111;}
+#header {height: 325px; background: url('../img/header_bg.jpg') center top repeat-x;}
 #contents {height: 800px; background: #222;}
 #footer {height: 200px; background: #333;}
 
@@ -26,6 +26,16 @@
 .container { 
   width: 990px; 
   margin: 0 auto; 
-  height: inherit;
+  height: inherit; 
   background: rgba(255, 255, 255, 0.3);
 }
+
+/* 헤더 메뉴 */
+.header {}
+.header .header-menu {text-align: right;}
+.header .header-menu a {color: #fff; padding: 10px 0 10px 13px; display: inline-block;}
+.header .header-menu a:hover {color: #6666;}
+.header .header-tit {text-align: center;}
+.header .header-tit h1 {background-color: #4aa8d4; font-size: 28px; padding: 5px 20px 6px 20px; margin-top: 20px; display: inline-block; color: #fff; font-weight: normal; text-transform: uppercase;}
+.header .header-tit a {display: inline; background-color: #2698cd; font-size: 18px; color: #fff; padding: 5px 20px 6px 20px; margin-top: -5px;}
+.header .header-icon {}
