--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -13,11 +13,11 @@
 /* 레아이웃 */
 #wrap {width: 100%;}
 #header {height: 325px; background: url('../img/header_bg.jpg') center top repeat-x;}
-#contents {height: 800px; background: #222;}
+#contents {}
 #footer {height: 200px; background: #333;}
 
 /* 컨텐츠 레이아웃 */
-#cont_nav {height: 200px; background: #444;}
+#cont_nav {}
 #cont_tit {height: 200px; background: #555;}
 #cont_ban {height: 200px; background: #666;}
 #cont_cont {height: 200px; background: #777;}
@@ -27,18 +27,17 @@
   width: 990px; 
   margin: 0 auto; 
   height: inherit; 
-  background: rgba(255, 255, 255, 0.3);
+  /* background: rgba(255, 255, 255, 0.3);/ */
 }
 
 /* 헤더 메뉴 */
-.header {}
 .header .header-menu {text-align: right;}
 .header .header-menu a {color: #fff; padding: 10px 0 10px 13px; display: inline-block;}
 .header .header-menu a:hover {color: #6666;}
 .header .header-tit {text-align: center;}
 .header .header-tit h1 {background-color: #4aa8d4; font-size: 28px; padding: 5px 20px 6px 20px; margin-top: 20px; display: inline-block; color: #fff; font-weight: normal; text-transform: uppercase;}
 .header .header-tit a {display: inline; background-color: #2698cd; font-size: 18px; color: #fff; padding: 5px 20px 6px 20px; margin-top: -5px;}
-.header .header-icon {text-align: center; margin-top: 30px;}
+.header .header-icon {text-align: center; margin-top: 30px; cursor: pointer;}
 .header .header-icon a {width: 60px; height: 60px; display: inline-block; background: url('../img/icon.png'); margin: 0 3px;}
 .header .header-icon a.icon1 {background-position: 0 0;}
 .header .header-icon a.icon2 {background-position: 0 -60px;}
@@ -48,3 +47,14 @@
 .header .header-icon a.icon2:hover {background-position: -60px -60px;}
 .header .header-icon a.icon3:hover {background-position: -60px -120px;}
 .header .header-icon a.icon4:hover {background-position: -60px -180px;}
+
+/* 전체 메뉴 */
+.nav {overflow: hidden; padding: 30px;}
+.nav > div {float: left; width: 40%;}
+/* .nav > div:last-chlid {width:20%;} ie9부터 가능 */
+.nav > div.last {width: 20%;}
+.nav > div h3 {font-size: 18px; color: #25a2d0; margin-bottom: 4px;}
+.nav > div ol {overflow: hidden;}
+.nav > div ol li {float: left; width: 50%;}
+.nav > div.last ol li {width:100%}
+.nav > div ol li a:hover {text-decoration: underline;}
