--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -19,7 +19,7 @@
 /* 컨텐츠 레이아웃 */
 #cont_nav {background-color: #f6fdff;}
 #cont_tit {background-color: #eaf7fd;}
-#cont_ban {height: 200px; background: #666;}
+#cont_ban {background: #dceff7;}
 #cont_cont {height: 200px; background: #777;}
 
 /* 컨테이너 */
@@ -63,3 +63,26 @@
 .tit {position: relative;}
 .tit h2 {font-size: 40px; text-align: center; padding: 5px 0; letter-spacing: 2px; color: #2c94c4; font-family: 'Nanum Brush Script', cursive;;}
 .tit .btn {position: absolute; top: 0; right: 0; width: 60px; height: 60px; background: url('../img/icon.png') no-repeat 0 -600px}
+
+/* 배너 */
+.ban {position: relative;}
+.ban a.prev {position: absolute; top: 60px; left: -60px; width: 43px; height: 43px; background: #ccc; background: url('../img/icon.png') no-repeat -150px 0;}
+.ban a.next {
+  position: absolute;
+  top: 60px;
+  right: -60px;
+  width: 43px;
+  height: 43px;
+  background: #ccc;
+  background: url('../img/icon.png') no-repeat -150px -43px;
+}
+.ban a.prev:hover {background-position: -193px 0;}
+.ban a.next:hover {background-position: -193px -43px;}
+
+
+.ban ul {overflow: hidden; padding: 30px 0;}
+.ban ul li {float: left; width: 330px;}
+.ban ul li:nth-child(2) {text-align: center;} /* ie9 */
+.ban ul li:last-child {text-align: right;} /* ie9 */
+.ban ul li img {border: 4px solid #dcdcdc;}
+.ban ul li img:hover {border-color: #98bcdc;}
