--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -19,8 +19,8 @@
 /* 컨텐츠 레이아웃 */
 #cont_nav {background-color: #f6fdff;}
 #cont_tit {background-color: #eaf7fd;}
-#cont_ban {background: #dceff7;}
-#cont_cont {height: 200px; background: #777;}
+#cont_ban {background-color: #dceff7;}
+#cont_cont {background-color: #f6fdff;}
 
 /* 컨테이너 */
 .container { 
@@ -86,3 +86,29 @@
 .ban ul li:last-child {text-align: right;} /* ie9 */
 .ban ul li img {border: 4px solid #dcdcdc;}
 .ban ul li img:hover {border-color: #98bcdc;}
+
+.cont {overflow: hidden; padding-top: 30px;}
+.cont .column {position: relative; float:left; width: 289px; height: 363px; margin: 0 30px 30px 0; padding-right: 30px;}
+.cont .col1 {border-right: 1px solid #c8c8c8;}
+.cont .col2 {border-right: 1px solid #c8c8c8;}
+.cont .col3 {margin-right: 0; padding-right: 0;}
+.cont .col4 {border-right: 1px solid #c8c8c8;}
+.cont .col5 {border-right: 1px solid #c8c8c8;}
+.cont .col6 {margin-right: 0; padding-right: 0;}
+
+.cont .column .ico_img {display: block; background: url(../img/icon.png) no-repeat; width: 60px; height: 60px; position: absolute; top: 0; left: 0;}
+.cont .column .ico_tit {padding-left: 70px; font-size: 16px; color: #2c94c4;}
+.cont .column .ico_desc {padding-left: 70px; border-bottom: 1px solid #d0d0d0; padding-bottom: 15px;}
+
+.cont .col1 .ico_img {background-position: 0 -240px;}
+.cont .col2 .ico_img {background-position: 0 -300px;}
+.cont .col3 .ico_img {background-position: 0 -360px;}
+.cont .col4 .ico_img {background-position: 0 -420px;}
+.cont .col5 .ico_img {background-position: 0 -480px;}
+.cont .col6 .ico_img {background-position: 0 -540px;}
+.cont .col1 .ico_img:hover {background-position: -60px -240px;}
+.cont .col2 .ico_img:hover {background-position: -60px -300px;}
+.cont .col3 .ico_img:hover {background-position: -60px -360px;}
+.cont .col4 .ico_img:hover {background-position: -60px -420px;}
+.cont .col5 .ico_img:hover {background-position: -60px -480px;}
+.cont .col6 .ico_img:hover {background-position: -60px -540px;}
