--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -126,3 +126,12 @@
 .notice2 ul li a {float: left; font-size: 12px; width: 60%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .notice2 ul li span {float: right; width: 30%; text-align: right;}
 .notice2 a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
+
+.notice3 {position: relative;}
+.notice3 h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice3 li {position: relative; padding: 8px 0 14px 60px;}
+.notice3 li a {}
+.notice3 li a img {width: 50px; position: absolute; left: 0; top: 0px; border: 1px solid #0093bd;}
+.notice3 li a strong {display: block;}
+.notice3 li a span {display: block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice3 a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
