--- a/web_pub/css/reset.css
+++ b/web_pub/css/reset.css
@@ -15,6 +15,9 @@ body, input, textarea, select, button, table {
   color: #222; font-size: 13px; line-height: 1.5;
 }
 
+/* 폰트 스타일 초기화 */
+em {font-style: normal;}
+
 /* 블릿기호 초기화 */
 dl,ul,li,ol,menu {list-style: none;}
 
@@ -28,4 +31,16 @@ h1,h2,h3,h4,h5,h6 {font-size: 13px; font-weight: normal; color: #222;}
 .ir_wa {display: block; overflow: hidden; position: relative; z-index: -1; width: 100%; height: 100%;}
 /* 의미있는 이미지의 대체 텍스트로 이미지가 없어도 대체 텍스트를 보여주고자 할 때 */
 .ir_su {overflow: hidden; position: absolute; width: 0; height: 0; line-height: 0; text-indent: -9999px;}
+
+/* margin, padding */
+.mt10 {margin-top: 10px !important;}
+.mt15 {margin-top: 15px !important;}
+.mt20 {margin-top: 20px !important;}
+.mt25 {margin-top: 25px !important;}
+.mt30 {margin-top: 30px !important;}
+.mt35 {margin-top: 35px !important;}
+.mt40 {margin-top: 40px !important;}
+.mt45 {margin-top: 45px !important;}
+.mt50 {margin-top: 50px !important;}
+
 
