--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -135,3 +135,23 @@
 .notice3 li a strong {display: block;}
 .notice3 li a span {display: block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
 .notice3 a.more {position: absolute; right: 0; top: 0; display: block; background: url(../img/icon.png) -150px -90px; width: 17px; height: 17px;}
+
+/* 마우스 오버효과 */
+.notice_hover h4 {font-size: 14px; color: #0093bd; padding-bottom: 3px; font-weight: bold;}
+.notice_hover ul {overflow: hidden; text-align: center;}
+.notice_hover li {float: left; width: 93px; margin-right: 5px;}
+.notice_hover li:last-child {margin-right: 0;}
+.notice_hover a span {display: block; position: relative; width: 93px; height: 93px; line-height: 93px;}
+.notice_hover a span img {width: 100%;}
+.notice_hover a span em {visibility: hidden; position: absolute; top: 0; left: 0; background: rgba(0,0,0,0.7); color: #fff; width: 100%; height: 100%;}
+.notice_hover a span:hover em {visibility: visible;}
+.notice_hover a strong {display: inline-block; padding-top: 3px; font-size: 12px;}
+
+.notice_hover2 ul {overflow: hidden; text-align: center;}
+.notice_hover2 li {float: left; width: 93px; margin-right: 5px;}
+.notice_hover2 li:last-child {margin-right: 0;}
+.notice_hover2 a span {display: block; position: relative; width: 93px; height: 93px;}
+.notice_hover2 a span img {width: 100%;}
+.notice_hover2 a span em {visibility: hidden; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0,0.7); color: #fff; width: 100%; height: 20px;}
+.notice_hover2 a span:hover em {visibility: visible;}
+.notice_hover2 a strong {display: inline-block; padding-top: 3px; font-size: 12px;}
