--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -155,3 +155,30 @@
 .notice_hover2 a span em {visibility: hidden; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0,0.7); color: #fff; width: 100%; height: 20px;}
 .notice_hover2 a span:hover em {visibility: visible;}
 .notice_hover2 a strong {display: inline-block; padding-top: 3px; font-size: 12px;}
+
+/* 콘텐츠 요소를 안 보이게 하는 방법 
+1. display: none -- display: block; 영역 사라짐
+2. visibility: hidden; -- visibility: visible; 영역 유지
+3. opacity: 0; -- opacity: 1; 영역 유지
+4. width:0; height:0; overflow: hidden; 
+*/
+/* 탭 메뉴 */
+.tab_menu {position: relative; border: 1px solid #ccc; height: 105px; padding: 8px;}
+.tab_menu ul {overflow: hidden; border-bottom: 1px solid #ccc;}
+.tab_menu ul li {float: left; border: 1px solid #ccc; margin-right: -1px;margin-bottom: -1px;}
+.tab_menu ul li a {display: block; padding: 5px 10px;}
+.tab_menu ul li ul {position: absolute; left: 0; top: 48px; width: 270px; border: 0;}
+.tab_menu ul li ul li {float: none; border: 0; background: url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
+.tab_menu ul li ul li a {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width:100%; padding: 0 0 3px 0;}
+.tab_menu ul li.active {background: #2c94c4;}
+.tab_menu ul li.active a {color: #fff;}
+.tab_menu ul li.active ul li a {color: #333;}
+
+.notice4 {position: relative; border: 1px solid #ccc;}
+.notice4 h4 {font-size: 14px; font-weight: 700; color: #0093bd; border-bottom: 1px solid #ccc; padding: 8px 10px;}
+.notice4 em {color: #D03592;}
+.notice4 ul {padding: 10px; }
+.notice4 li {overflow: hidden; background: url(../img/dot.gif) no-repeat 0px 8px; padding-left: 8px;}
+.notice4 li a {float: left; width: 60%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice4 li span {float: right; width: 40%; text-align: right;}
+.notice4 a.more {position: absolute; right: 10px; top: 8px;}
