--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -192,5 +192,17 @@
 .gallery .gallery_btn li.gb_icon2 a:hover {background-position: -173px -143px;}
 .gallery .gallery_btn li.gb_icon3 a:hover {background-position: -173px -166px;}
 .gallery .gallery_btn li.gb_icon4 a:hover {background-position: -173px -189px;}
-.gallery .gallery_img {}
 .gallery .gallery_img img {width: 100%;}
+
+/* 로그인 */
+#login_form {background: #f2f4f5; padding: 15px;}
+.lc_header {overflow: hidden; font-size: 12px; height: 30px;}
+.lc_header .lh_check {float: left; padding-right: 15px;}
+.lc_header .lh_check .input_check {vertical-align: -2px;}
+.lc_header .lh_ip em {text-decoration: underline; color: #0093bd;}
+.lc_content {position: relative;}
+.lc_content .lc_btn {position: absolute; right: 0; top: 0; width: 62px; height: 47px; background: #fff; border: 1px solid #bebebe;}
+.lc_content .input_text {width: 180px; height: 16px; padding: 2px 5px; border: 1px solid #bebebe; margin-bottom: 3px; background: #fff;}
+.lc_footer {margin-top: 5px;}
+.lc_footer li {display: inline;}
+.lc_footer li a {font-style: 12px;}
