--- a/web_pub/css/reset.css
+++ b/web_pub/css/reset.css
@@ -24,6 +24,9 @@ dl,ul,li,ol,menu {list-style: none;}
 /* 제목 태그 초기화 */
 h1,h2,h3,h4,h5,h6 {font-size: 13px; font-weight: normal; color: #222;}
 
+/* 버튼 초기화 */
+button { border: 0;}
+
 /* IR 효과 */
 /* 의미있는 이미지의 대체 텍스트를 제공하는 경우 */
 .ir_pm {display: block; overflow: hidden; font-size: 0; line-height: 0; text-indent: -9999px;}
