--- a/web_pub/css/style.css
+++ b/web_pub/css/style.css
@@ -17,7 +17,7 @@
 #footer {border-top: 1px solid #eee;}
 
 /* 컨텐츠 레이아웃 */
-#cont_nav {background-color: #f6fdff;}
+#cont_nav {background-color: #f6fdff; display: none;}
 #cont_tit {background-color: #eaf7fd;}
 #cont_ban {background-color: #dceff7;}
 #cont_cont {background-color: #f6fdff;}
@@ -63,9 +63,9 @@
 .tit {position: relative;}
 .tit h2 {font-size: 40px; text-align: center; padding: 5px 0; letter-spacing: 2px; color: #2c94c4; font-family: 'Nanum Brush Script', cursive;;}
 .tit .btn {position: absolute; top: 0; right: 0; width: 60px; height: 60px; background: url('../img/icon.png') no-repeat 0 -600px}
-
+.tit .btn.on {background-position: 0 -660px;}
 /* 배너 */
-.ban {position: relative;}
+/* .ban {position: relative;}
 .ban a.prev {position: absolute; top: 60px; left: -60px; width: 43px; height: 43px; background: #ccc; background: url('../img/icon.png') no-repeat -150px 0;}
 .ban a.next {
   position: absolute;
@@ -82,10 +82,33 @@
 
 .ban ul {overflow: hidden; padding: 30px 0;}
 .ban ul li {float: left; width: 330px;}
-.ban ul li:nth-child(2) {text-align: center;} /* ie9 */
-.ban ul li:last-child {text-align: right;} /* ie9 */
+.ban ul li:nth-child(2) {text-align: center;} 
+.ban ul li:last-child {text-align: right;} 
 .ban ul li img {border: 4px solid #dcdcdc;}
-.ban ul li img:hover {border-color: #98bcdc;}
+.ban ul li img:hover {border-color: #98bcdc;} */
+
+/* 슬릭 배너 */
+.ban {position: relative; padding: 24px 0 32px;}
+.ban .slick-prev {position: absolute; top: 60px; left: -60px; width: 43px; height: 43px; background: #ccc; background: url('../img/icon.png') no-repeat -150px 0; text-indent: -9999px;}
+.ban .slick-next {
+  position: absolute;
+  top: 60px;
+  right: -60px;
+  width: 43px;
+  height: 43px;
+  background: #ccc;
+  background: url('../img/icon.png') no-repeat -150px -43px;
+  text-indent: -9999px;
+}
+.ban .slick-prev:hover {background-position: -193px 0;}
+.ban .slick-next:hover {background-position: -193px -43px;}
+.ban img {border: 4px solid #dcdcdc;}
+.ban .slick-slide {margin: 10px;}
+.ban .slick-dots {position: absolute; bottom: 10px; display: block; width: 100%; text-align: center;}
+.ban .slick-dots li {display: inline-block; width: 15px; height: 15px; margin: 5px;}
+.ban .slick-dots li button {font-size: 0; line-height: 0; display: block; width: 15px; height: 15px; cursor: pointer; background: #5dbfeb; border-radius: 50%;}
+.ban .slick-dots li.slick-active button {background: #2b91c8;}
+
 
 .cont {overflow: hidden; padding-top: 30px;}
 .cont .column {position: relative; float:left; width: 289px; height: 363px; margin: 0 30px 30px 0; padding-right: 30px;}
